--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <title></title>
+        <title>Brick By Balance: {%block title %} {% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="{{url_for('static',filename ='css/styles.css')}}" rel = 'stylesheet'>
+        {% block head %} {% endblock %}
     </head>
 </html>
