--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,4 +6,19 @@
         <link href="{{url_for('static',filename ='css/styles.css')}}" rel = 'stylesheet'>
         {% block head %} {% endblock %}
     </head>
+
+
+    <div class="toolbar">
+        <div class="logo">
+            <img src="" alt="">
+        </div>
+        <div class="navbar">
+          <a id="" href="/">HOME</a>
+          <a id="" href="#">FIXTURES</a>
+          <a id="" href="#">MATCH HISTORY</a>
+          <a id="" href="#">PERFORMANCE OVERVIEW</a>
+          {% block navBarEntry %}
+          {% endblock %}
+        </div>
+      </div>
 </html>
