--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,22 +3,22 @@
     <head>
         <title>Brick By Balance: {%block title %} {% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="{{url_for('static',filename ='css/styles.css')}}" rel = 'stylesheet'>
+        <link href="{{url_for('static',filename ='style.css')}}" rel = 'stylesheet'>
         {% block head %} {% endblock %}
     </head>
 
-
-    <div class="toolbar">
-        <div class="logo">
-            <img src="" alt="">
+    <body>
+        <div class="toolbar">
+            <div class="logo">
+                <img src="" alt="">
+                <div class="navbar">
+                    <a id="" href="/">HOME</a>
+                    <a id="" href="#">FIXTURES</a>
+                    <a id="" href="#">MATCH HISTORY</a>
+                    <a id="" href="#">PERFORMANCE OVERVIEW</a>
+                </div>
+            </div>
         </div>
-        <div class="navbar">
-          <a id="" href="/">HOME</a>
-          <a id="" href="#">FIXTURES</a>
-          <a id="" href="#">MATCH HISTORY</a>
-          <a id="" href="#">PERFORMANCE OVERVIEW</a>
-          {% block navBarEntry %}
-          {% endblock %}
-        </div>
-      </div>
+        {%block main %} {% endblock %}
+    </body>
 </html>
