--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,9 @@
             <div class="logo">
                 <img src="" alt="">
                 <div class="navbar">
+                    <img src ="{{url_for('static',filename='logo.jpg')}}" width ='40' height = '30' alt="">
                     <a id="" href="/">HOME</a>
-                    <a id="" href="#">FIXTURES</a>
+                    <a id="" href="/mortgageCalculator">MORTGAGE CALCULATOR</a>
                     <a id="" href="#">MATCH HISTORY</a>
                     <a id="" href="#">PERFORMANCE OVERVIEW</a>
                 </div>
