--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block main %}
-<div id="main-menu" style="">
+<div id="main-menu">
     <div class="container">
         <div class="row">
             <div class="header-text">
