--- a/static/style.css
+++ b/static/style.css
@@ -1,98 +1,99 @@
+html,
+body, 
+a {
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  font-family: Stretch;
+  src: url(../static/StretchPro.otf) format("opentype");
+}
+
 h1 {
-    font-size: 40px;
-    font-family: "Jumper";
-    width: fit-content;
-    color: #FF6B01;
-    line-height: 1;
-    margin-bottom: 20px;
-    letter-spacing: -1;
-    justify-content:center;
-    margin-left: 10px;
-    margin-bottom: -35px;
+  font-size: 40px;
+  font-family: "Stretch";
+  width: fit-content;
+  color: #FF6B01;
+  line-height: 1;
+  margin-bottom: 20px;
+  letter-spacing: -1;
+  justify-content:center;
+  margin-left: 10px;
+  margin-bottom: -35px;
 }
   
-  
 p{
-    font-size: 18px;
-    margin: 50px 0;
-    max-width: 800px; /* Set the maximum width of the text content */
+  font-size: 18px;
+  margin: 50px 0;
+  max-width: 800px; /* Set the maximum width of the text content */
 }
   
 .toolbar{
-    background-color: #28033c;
-    color: white;
-    padding: 10px;
-    display: flex;
-    align-items: center;
+  background-color: #28033c;
+  color: white;
+  padding: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .logo img{
-    max-width: 60%;
-    height: auto; 
-    display: block;
-    margin-left: 0;
+  max-width: 60%;
+  height: auto; 
+  display: block;
+  margin-left: 0;
 }
 
 .navbar {
-    overflow: hidden;
-    background-color: #28033c; /* Change to your desired color */
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 80%;  
-    margin-right: 10px;
-    font-family: "Jumper";
+  overflow: hidden;
+  background-color: #28033c; /* Change to your desired color */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 80%;  
+  margin-right: 10px;
 }
   
-  .navbar a {
-    font-size: 14px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+.navbar a {
+  font-size: 14px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
   
-  .dropdown {
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 15px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 16px 18px;
-    background-color: inherit;
-    font-family: "Jumper"; 
-    margin: 0; 
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #28033c;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #28033c;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #28033c;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #28033c;
+}
+
+#main-menu{
+  background-size: cover;
+  background-position: center;
+  background-color: #28033c;
+  color: white; /* Set text color to white or your desired color */
+  padding: 100px 0; /* Adjust the padding as needed */
+}
+
+.header-text {
+  max-width: 650px; /* Set the maximum width of the text content */
+  margin-left: 10px;
+}
+
+.header-text h1 {
+  font-size: 26px;
+  font-family: "Stretch";
+  letter-spacing: 1px;
+  max-width: 800px;
+}
+
+.header-text h2 {
+  font-size: 36px;
+  line-height: 1;
+  color: white;
+}
+
+.header-text p {
+  font-size: 16px;
+  line-height: 1;
+  margin-bottom: 20px;
+}
