--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,18 +5,15 @@
 {% endblock %}
 
 {% block main %}
-<p> Welcome to Brick By balance!</p>
-{% endblock %}
 
-{% block main %}
 <div id="main-menu">
     <div class="container">
         <div class="row">
             <div class="header-text">
-                <h1>Brick By Balance</h1>
-                <h2>Building Financial<em>Confidence</em> for first-time homebuyers</h2>
+                <h1>BRICK BY BALANCE</h1>
+                <h2>Building Financial <em>Confidence</em> for first-time homebuyers</h2>
                 <div class="div-dec"></div>
-                <p>Empowers aspiring homeowners with the tools and insights needed to navigate the path to home ownership. From tailored savings plans to market insights, we provide a clear roadmap to help you achieve your dream of buying a home. Start planning today, and let us guide you every step of the way.</p>
+                <p>Empowers aspiring homeowners with the tools and insights needed to navigate the path to home ownership. From tailored savings plans to market insights, we provide a clear roadmap to help you achieve your dream of buying a home. Start planning today, and let us guide you every step of the ways.</p>
             </div>
         </div>
     </div>
