--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="row">
             <div class="header-text">
-                <h1>BRICK BY BALANCE</h1>
-                <h2>Building Financial <em>Confidence</em> for first-time homebuyers</h2>
+                <h1>BRRICK BY BALANCE</h1>
+                <h2>BUILDING FINANCIAL <em>CONFIDENCE</em> FOR FIRST-TIME HOMEBUYERS</h2>
                 <div class="div-dec"></div>
                 <p>Empowers aspiring homeowners with the tools and insights needed to navigate the path to home ownership. From tailored savings plans to market insights, we provide a clear roadmap to help you achieve your dream of buying a home. Start planning today, and let us guide you every step of the ways.</p>
             </div>
