--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,17 +5,47 @@
 {% endblock %}
 
 {% block main %}
-
-<div id="main-menu">
-    <div class="container">
-        <div class="row">
-            <div class="header-text">
-                <h1>BRRICK BY BALANCE</h1>
-                <h2>BUILDING FINANCIAL <em>CONFIDENCE</em> FOR FIRST-TIME HOMEBUYERS</h2>
-                <div class="div-dec"></div>
-                <p>Empowers aspiring homeowners with the tools and insights needed to navigate the path to home ownership. From tailored savings plans to market insights, we provide a clear roadmap to help you achieve your dream of buying a home. Start planning today, and let us guide you every step of the ways.</p>
+<div id="main-content" class="flex-container">
+    <!-- Left Side: Main Menu Content -->
+    <div id="main-menu" style="background-image:url(../static/background.jpg);">
+        <div class="container">
+            <div class="row">
+                <div class="header-text">
+                    <h1>BRICK BY BALANCE</h1>
+                    <h2>BUILDING FINANCIAL <em>CONFIDENCE</em> FOR FIRST-TIME HOMEBUYERS</h2>
+                    <div class="div-dec"></div>
+                    <p>Empowers aspiring homeowners with the tools and insights needed to navigate the path to home ownership. From tailored savings plans to market insights, we provide a clear roadmap to help you achieve your dream of buying a home. Start planning today, and let us guide you every step of the way.</p>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Right Side: Pyramid Scene 
+    <div class="scene">
+        <div class="floor"></div>
+        <div class="pyramid bottom">
+            <div></div><div></div><div></div><div></div>
+        </div>
+        <div class="pyramid top">
+            <div></div><div></div><div></div><div></div>
+        </div>
+    </div>
 </div>
+-->
+
+<!-- Section for registration / login -->
+{% if not user %}
+<div class="content-block" id="registration-section" style="background-image: url(../static/images/bg1.png);">
+  <h1>REGISTRATION</h1>
+  <p>Discover the power of Tour-Ment, your all-in-one tournament organization tool. Manage all your tournaments in one place whatever their structures and matches formats. Decide how players participate in your tournaments. Showcase your tournament activities through a dedicated site, Tour-Ment makes it all possible.</p>
+  <div class="buttons-registration">
+  <a href="/sign-up" id="signup-button">SIGN UP</a>
+  <a href="/login" id="login-button">LOGIN</a>
+  </div>
+</div>
+{% endif %} 
+
+
+
 {% endblock %}
+
