--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,21 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 {% block title %} 
 Login 
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
-<form method="POST">
+<form action="/login" method="POST">
   <h1 class="login-title">LOGIN</h1>
   <div class="form-group">
-    <label for="email">EMAIL ADDRESS</label>
+    <label for="username">USERNAME</label>
     <input
-      type="email"
+      type="text"
       class="form-control"
-      id="email"
-      name="email"
-      placeholder="Enter email"
+      id="username"
+      name="username"
+      placeholder="Enter username"
     />
   </div>
   <div class="form-group">
@@ -31,6 +31,7 @@ Login
   <br />
   <button type="submit" class="btn btn-primary">LOGIN</button>
 </form>
+<p>{{ fail }}</p>
 <a id="signUp" href="/sign-up">Not a user? Sign Up</a>
 
 {% endblock %}
