--- a/templates/register.html
+++ b/templates/register.html
@@ -4,32 +4,21 @@
 Sign-Up 
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
 <form method="POST">
     <h1 class="login-title">SIGN UP</h1>
 
     <div class="form-group">
-      <label for="firstName">FIRST NAME</label>
+      <label for="username">Username</label>
       <input
         type="text"
         class="form-control"
-        id="firstName"
-        name="firstName"
-        placeholder="Enter first name"
+        id="username"
+        name="username"
+        placeholder="Enter username"
       />
     </div>
-
-    <div class="form-group">
-        <label for="lastName">LAST NAME</label>
-        <input
-          type="text"
-          class="form-control"
-          id="lastName"
-          name="lastName"
-          placeholder="Enter last name"
-        />
-      </div>
 
       <div class="form-group">
         <label for="email">EMAIL ADDRESS</label>
@@ -47,25 +36,14 @@ Sign-Up
         <input
           type="password"
           class="form-control"
-          id="password1"
-          name="password1"
+          id="password"
+          name="password"
           placeholder="Enter password"
         />
       </div>
-  
-      <div class="form-group">
-        <label for="password2">PASSWORD (CONFIRM)</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password2"
-          name="password2"
-          placeholder="Confirm password"
-        />
-      </div>
-
       <br />
       <button type="submit" class="btn btn-primary">SUBMIT</button>
     </form>
+    <p>{{ fail }}</p>
   {% endblock %}
 
