--- a/static/style.css
+++ b/static/style.css
@@ -122,7 +122,7 @@ p{
   margin-bottom: -60px;
 }
 
-#registration-section, #mortgage-section h1 {
+#registration-section h1 {
   font-size: 40px;
   text-align: center;
   color: #FF6B01;
@@ -133,6 +133,7 @@ p{
   margin: 20px 10; /* Add margin below the paragraph */
   max-width: 800px; /* Set the maximum width of the text content */
   margin-top: 40px;
+  color: black;
 }
 
 #signup-button, #login-button, .btn-primary, #mortgage-button {
@@ -151,21 +152,69 @@ p{
 #signup-button:hover, #login-button:hover, #mortgage-button:hover {
   background-color: #000000; /* Adjust hover color */
 }
-
+/*
 #mortgage-section {
   text-align: center;
-  padding: 50px 0; /* Adjust padding as needed */
+  padding: 50px 0;  
   color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+*/
+#mortgage-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  gap: 5px;
+}
+
+.mortgage-text {
+  flex: 1;
+}
+
+.mortgage-gif {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+#mortgage-section h1 {
+  font-size: 40px;
+  text-align: center;
+  color: #FF6B01;
+}
+
+#mortgage-button {
+  margin-left: 300px;
+}
+
+.feature-item {
+  text-align: center;
+  cursor: pointer;
+}
+
+.feature-icon {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 10px;
+}
+
+.feature-details {
+  font-size: 0.9em;
+  color: #555;
+  padding-top: 10px;
+}
 
 #mortgage-section p {
   font-size: 18px;
-  margin: 20px 10; /* Add margin below the paragraph */
+  /*margin: 20px 10;  Add margin below the paragraph */
   max-width: 800px; /* Set the maximum width of the text content */
-  margin-top: 40px;
+  margin-left: 60px;
+  margin-top: -200px;
 }
 
 /*FORMS FOR LOGIN AND REGISTER PAGE*/
