--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,12 +11,16 @@
         <div class="toolbar">
             <div class="logo">
                 <img src="" alt="">
+            {% if session.name %}
+            <a id="" href="/mortgageCalculator">MORTGAGE CALCULATOR</a>
+            <a id="" href="/logout">LOGOUT</a>
+            {% else %}
                 <div class="navbar">
                     <img src ="{{url_for('static',filename='logo.png')}}" width ='40' height = '30' alt="">
                     <a id="" href="/">HOME</a>
-                    <a id="" href="/mortgageCalculator">MORTGAGE CALCULATOR</a>
-                    <a id="" href="#">MATCH HISTORY</a>
-                     <a id="" href="#">PERFORMANCE OVERVIEW</a>
+                    <a id="" href="/login">LOGIN</a>
+                    <a id="" href="/register">REGISTER</a>
+                    
                 </div>
             </div>
         </div>
