--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
                     <a id="" href="/">HOME</a>
                     <a id="" href="/login">LOGIN</a>
                     <a id="" href="/register">REGISTER</a>
-                    
+            {% endif %}
                 </div>
             </div>
         </div>
