--- a/static/style.css
+++ b/static/style.css
@@ -192,9 +192,31 @@ p{
   margin-left: 300px;
 }
 
+.mortgage-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+}
+
 .feature-item {
   text-align: center;
+  width: 20%; 
   cursor: pointer;
+  background-color: rgba(255, 107, 1, 0.5); 
+  border-radius: 15px; 
+  padding: 20px; 
+  box-sizing: border-box; 
+  transition: all 0.3s ease;
+}
+
+.feature-item p{
+  font-size: 18px;
+  color: black;
+}
+
+.feature-item:hover {
+  background-color: rgba(255, 107, 1, 0.7); 
 }
 
 .feature-icon {
@@ -211,10 +233,9 @@ p{
 
 #mortgage-section p {
   font-size: 18px;
-  /*margin: 20px 10;  Add margin below the paragraph */
-  max-width: 800px; /* Set the maximum width of the text content */
+  max-width: 800px; 
   margin-left: 60px;
-  margin-top: -200px;
+  margin-top: -50px;
 }
 
 /*FORMS FOR LOGIN AND REGISTER PAGE*/
