--- a/static/style.css
+++ b/static/style.css
@@ -35,12 +35,14 @@ p{
 }
   
 .toolbar{
+  justify-content: space-between;
   background-color: #28033c;
   color: white;
   font-family: "Coco";
   padding: 10px;
   display: flex;
   align-items: center;
+  padding: 10px 20px;
 }
 
 .logo img{
@@ -54,9 +56,9 @@ p{
   overflow: hidden;
   background-color: #28033c;  /*Change to your desired color */
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;/*was flex end*/
   align-items: center;
-  width: 90%;  
+  width: 100%;  
   margin-right: 10px;
 }
   
@@ -66,6 +68,10 @@ p{
   text-align: center;
   padding: 16px 20px;
   text-decoration: none;
+}
+
+#logout-link{
+  margin-left: auto;
 }
   
 .navbar a:hover, .dropdown:hover .dropbtn {
