--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -57,6 +57,15 @@ Prediction
         placeholder="savings"
         />
 </div>
+<div class="form-group">
+    <label for="region">ENTER THE REGION THAT YOU WOULD LIKE TO LOOK FOR A HOUSE IN</label>
+    <select id="region" name="region">
+    <option value="ten">10%</option>
+    <option value="fifthteen">15%</option>
+    <option value="twenty">20%</option>
+    </select>
+    </label>
+</div>
 
 
 
