--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -60,9 +60,19 @@ Prediction
 <div class="form-group">
     <label for="region">ENTER THE REGION THAT YOU WOULD LIKE TO LOOK FOR A HOUSE IN</label>
     <select id="region" name="region">
-    <option value="ten">10%</option>
-    <option value="fifthteen">15%</option>
-    <option value="twenty">20%</option>
+        <option value="Wales">Wales</option>
+        <option value="Inner London">Inner London</option>
+        <option value="Outer London">Outer London</option>
+        <option value="London">London</option>
+        <option value="East of England">East of England</option>
+        <option value="North West">North West</option>
+        <option value="South East">South East</option>
+        <option value="West Midlands Region">West Midlands Region</option>
+        <option value="South West">South West</option>
+        <option value="East Midlands">East Midlands</option>
+        <option value="Yorkshire and The Humber">Yorkshire and The Humber</option>
+        <option value="North East">North East</option>
+        <option value="Scotland">Scotland</option>
     </select>
     </label>
 </div>
