modifications to mortgage calculator

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -49,7 +49,7 @@
       <p>Our Mortgage Calculator is here to help you make informed decisions about your home loan options. Whether you're exploring your first mortgage or assessing different financing options, this tool provides a clear estimate of your monthly payments, loan terms, and interest over time.</p> 
       
       <div class="buttons-registration">
-        <a href="./mortgageCalculator.html" id="mortgage-button">CALCULATE MORTGAGE</a>
+        <a href="/mortgageCalculator" id="mortgage-button">CALCULATE MORTGAGE</a>
       </div>
     </div>
     
