Further modifications to the html files

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,22 +23,17 @@
   <h1>REGISTRATION</h1>
   <p>We help aspiring homeowners build the financial confidence they need to achieve their dreams of owning a home. In this section, you can either log in if you're an existing member or sign up to join our community and gain access to personalized financial insights, tailored savings plans, and exclusive resources. Let’s get started, so you can start building your path to homeownership!</p>
   <div class="buttons-registration">
-  <a href="./sign_up.html" id="signup-button">SIGN UP</a>
-  <a href="./login.html" id="login-button">LOGIN</a>
-  </div>
+        <form action="/register" method="GET">
+            <button type="submit">SIGN UP</button>
+        </form>
+        
+        <form action="/login" method="GET">
+            <button type="submit">LOGIN</button>
+        </form>  
+    </div>
 </br>
 <h1>MORTGAGE CALCULATOR</h1>
 </div>
-
-<!--Section for Mortgage Calculator
-<div class="content-block" id="mortgage-section">
-  <h1>MORTGAGE CALCULATOR</h1>
-  <p>Our Mortgage Calculator is here to help you make informed decisions about your home loan options. Whether you're exploring your first mortgage or assessing different financing options, this tool provides a clear estimate of your monthly payments, loan terms, and interest over time.</p>
-  <div class="buttons-registration">
-  <a href="./mortgageCalculator.html" id="mortgage-button">MORTGAGE CALCULATOR</a>
-  </div>
-</div>
--->
 
 
 <!-- Section for Mortgage Calculator -->
