--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@ Sign-Up
     <h1 class="login-title">SIGN UP</h1>
 
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">USERNAME</label>
       <input
         type="text"
         class="form-control"
