--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,7 +23,7 @@
   <h1>REGISTRATION</h1>
   <p>We help aspiring homeowners build the financial confidence they need to achieve their dreams of owning a home. In this section, you can either log in if you're an existing member or sign up to join our community and gain access to personalized financial insights, tailored savings plans, and exclusive resources. Let’s get started, so you can start building your path to homeownership!</p>
   <div class="buttons-registration">
-  <a href="./sign_up.html" id="signup-button">SIGN UP</a>
+  <a href="./register.html" id="signup-button">SIGN UP</a>
   <a href="./login.html" id="login-button">LOGIN</a>
   </div>
 </br>
