--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@ Sign-Up
       </div>
 
       <div class="form-group">
-        <label for="password1">PASSWORD</label>
+        <label for="password">PASSWORD</label>
         <input
           type="password"
           class="form-control"
