further implementation of homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -31,8 +31,8 @@
             <button type="submit">LOGIN</button>
         </form>  
     </div>
-</br>
-<h1>MORTGAGE CALCULATOR</h1>
+    </br>
+    <h1>MORTGAGE CALCULATOR</h1>
 </div>
 
 
@@ -90,5 +90,18 @@
     </script>
 </div>
 
+<div class="content-block" id="registration-section">
+    <h1>PREDICT YOUR IDEAL HOME</h1>
+    <h2>Let our model predict the best housing options for your budget based on your income, savings, and preferences.</h2>
+
+    <div class="content-container">
+        <div class="text-section">
+            <p>This feature allows users to input key financial information and get predictions on the type of homes they might be able to afford. It’s a powerful tool designed to help first-time homebuyers navigate the complex housing market with a clear understanding of what they can afford based on their financial situation. By providing relevant data like monthly income, savings, deposit percentage, and desired house type, users can make smarter decisions about which property best fits their budget and goals.</p>
+        </div>
+        <div class="image-section">
+            <img src="../static/IdealHome.png" alt="Home Prediction Tool Image">
+        </div>
+    </div>
+</div>
 {% endblock %}
 
