--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -59,7 +59,7 @@
     <div class="mortgage-container">
         <div class="feature-item">
         <img src="../static/wallet.png" alt="Monthly Payments Icon" class="feature-icon" onclick="toggleDetails('details1')">
-        <h3>Estimate Your Monthly Payments</h3>
+        <h2>ESTIMATE YOUR MONTHLY PAYMENTS</h2>
         <p id="details1" class="feature-details" style="display: none;">
             Enter your loan amount, interest rate, and term to get an estimate of your monthly payments, helping you budget confidently.
         </p>
@@ -67,7 +67,7 @@
 
         <div class="feature-item">
         <img src="../static/payment-method.png" alt="Financing Options Icon" class="feature-icon" onclick="toggleDetails('details2')">
-        <h3>Compare Different Financing Options</h3>
+        <h2>COMPARE DIFFERENT FINANCING OPTIONS</h2>
         <p id="details2" class="feature-details" style="display: none;">
             Adjust variables like loan term, interest rate, and down payment to compare scenarios and find the best option for you.
         </p>
@@ -75,7 +75,7 @@
 
         <div class="feature-item">
         <img src="../static/bank.png" alt="Financial Journey Icon" class="feature-icon" onclick="toggleDetails('details3')">
-        <h3>Plan Your Long-Term Financial Journey</h3>
+        <h2>PLAN YOUR LONG-TERM FINANCIAL JOURNEY</h2>
         <p id="details3" class="feature-details" style="display: none;">
             View the total interest and repayment costs over the loan’s lifetime, helping you prepare for homeownership with long-term insights.
         </p>
