--- a/static/style.css
+++ b/static/style.css
@@ -5,19 +5,9 @@ a {
   padding: 0;
 }
 
-@font-face {
-  font-family: StretchPro;
-  src: url(../static/StretchPro.otf) format("opentype");
-}
-
-@font-face {
-  font-family: Coco;
-  src: url(../static/Cocogoose-Pro-Bold-trial.ttf) format("opentype");
-}
-
 h1 {
   font-size: 40px;
-  font-family: "StretchPro";
+  font-family: "Arial, sans-serif";
   width: fit-content;
   color: #FF6B01;
   line-height: 1;
@@ -33,7 +23,7 @@ h2{
   line-height: 1;
   margin-top: 40px;
   color: black;
-  font-family: "Coco";
+  font-family: "Arial, sans-serif";
 }
 
 p{
@@ -46,7 +36,7 @@ p{
   justify-content: space-between;
   background-color: #28033c;
   color: white;
-  font-family: "Coco";
+  font-family: "Arial, sans-serif";
   padding: 10px;
   display: flex;
   align-items: center;
@@ -101,7 +91,7 @@ p{
 
 .header-text h1 {
   font-size: 47px;
-  font-family: "StretchPro";
+  font-family: "Arial, sans-serif";
   letter-spacing: 1px;
   max-width: 1000px;
   margin-bottom: 10px;
@@ -112,7 +102,7 @@ p{
   font-size: 36px;
   line-height: 1;
   color: white;
-  font-family: "Coco";
+  font-family: "Arial, sans-serif";
   /*margin-left: -150px;*/
 }
 
@@ -159,7 +149,7 @@ button[type="submit"] {
   background-color: #FF6B01; /* Choose a button color */
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  font-family: "Coco";
+  font-family: "Arial, sans-serif";
 }
 
 .buttons-registration {
@@ -181,7 +171,7 @@ button[type="submit"] {
   background-color: #FF6B01; /* Choose a button color */
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  font-family: "Coco";
+  font-family: "Arial, sans-serif";
 }
 
 #signup-button:hover, #login-button:hover, #mortgage-button:hover {
@@ -286,7 +276,7 @@ button[type="submit"] {
   
   .form-group {
     margin-bottom: 20px;
-    font-family: "Coco";
+    font-family: "Arial, sans-serif";
     text-align: left;
     display: flex;
     align-items: center;
@@ -297,11 +287,11 @@ button[type="submit"] {
     display: block;
     margin-bottom: 5px;
     margin-right: 5px;
-    font-family: "Coco";
+    font-family: "Arial, sans-serif";
   }
   
   input{
-    font-family: "Coco";
+    font-family: "Arial, sans-serif";
   }
   
   .form-control {
