--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,9 @@
                 <img src ="{{url_for('static',filename='logo.png')}}" width ='40' height = '30' alt="">
             {% if session.name %}
                 <a id="" href="/mortgageCalculator">MORTGAGE CALCULATOR</a>
+                <a id="" href="/prediciton">PREDICTION</a>
                 <a id="" href="/logout">LOGOUT</a>
+                
             {% else %}
                     <a id="" href="/">HOME</a>
                     <a id="" href="/login">LOGIN</a>
