--- a/templates/results.html
+++ b/templates/results.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 {% block main %}
 
+<div style="margin-left:50px">
 <div class="container">
     <h1>Prediction Results</h1>
     <p>Here are the results based on the information you provided:</p>
@@ -12,11 +13,15 @@
         <ul>
             <li>House Type: {{ houseType }}</li>
             <li>Years Until Deposit is Put Down: {{ years }} years</li>
-            <li>Deposit Percentage: {{ deposit }}</li>
-            <li>Monthly Income: £{{ monthlyIncome }}</li>
+            <li>Deposit Percentage: {{ deposit }}%</li>
             <li>Savings: £{{ savings }}</li>
             <li>Region: {{ region }}</li>
-            <li>Estimated House Price: £{{ house_price }}</li>
+            <li>Estimated House Price: £{{ cost }}</li>
+            <li>How much you have to save in total: £{{ total }}</li>
+            <li>How much left you have to save: £{{ left }}</li>
+            <li>How much to save per month: £{{ isa + snp }} </li>
+            <li>Amount to go in a LISA per: month £{{ isa }}</li>
+            <li>Amount to go into S&P 500 per month:£{{ snp }}</li>
         </ul>
     </div>
 
@@ -24,10 +29,13 @@
         <a href="/prediction" class="btn btn-primary">Make Another Prediction</a>
         <a href="/History" class="btn btn-secondary">View Prediction History</a>
     </div>
+    <br>
+    <br>
+    <br>
 </div>
 
 <div class="result-container">
-    <h2>YOUR SAVING PLAN</h2>
+</div>
 </div>
 
 
